--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>favourites</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header
+  [title]="'favourites'"
+  [isEditable]="false"
+  [backwardRoute]="'/tabs/main'"
+  [isMain]="false"
+></app-header>
+<ion-content class="ion-padding">
 
-<ion-content>
-
-</ion-content>
+  </ion-content>
