--- a/src/app/modules/policy/policy.page.html
+++ b/src/app/modules/policy/policy.page.html
@@ -1,9 +1,25 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>policy</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
+<app-header
+  [title]="'policy'"
+  [isEditable]="false"
+  [backwardRoute]="'/tabs/main'"
+  [isMain]="false"
+></app-header>
+<ion-content class="ion-padding">
+  <ion-card class="ion-padding">
+    <div class="content">
+      <p class="fn-14 dalel-Regular gray-black-color">
+        هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي
+        القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة
+        التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسومهناك حقيقة مثبتة منذ
+        زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على
+        الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
+        استخدام طريقة لوريم إيبسوم هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى
+        المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل
+        توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم
+        إيبسومهناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما
+        سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في
+        الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسوم
+      </p>
+    </div>
+  </ion-card>
 </ion-content>
