--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,17 @@
 .my-menu-content {
   ion-item {
     margin-bottom: 8px;
+    ion-icon {
+      font-size: 16px;
+    }
+
+    .icon-margin-left {
+      margin: 0 0 0 10px;
+    }
+
+    .icon-margin-right {
+      margin: 0 10px 0 0;
+    }
   }
   .selected {
     ion-item::part(native) {
@@ -82,10 +93,10 @@
   // }
 }
 
-.logout-section{
+.logout-section {
   ion-item {
     margin-bottom: 8px;
-    ion-icon{
+    ion-icon {
       font-size: 18px;
     }
   }
