--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -5,5 +5,53 @@
   [isMain]="false"
 ></app-header>
 <ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let item of favourites">
+        <ion-card class="ion-no-margin">
+          <img src="./../../../assets/images/512.png" />
 
-  </ion-content>
+          <div class="price-container">
+            <span class="white-color fn-12 dalel-Regular"
+              >{{item.price}} {{item.unit}}</span
+            >
+          </div>
+
+          <ion-card-content>
+            <!-- <div class="rating-address-container">
+              <div>
+                <ion-icon name="location-sharp" color="primary"></ion-icon>
+                <p class="fn-14 dalel-Regular"> {{item.city}}</p>
+              </div>
+              <div>
+                <ion-button disabled="true" color="primary">
+                  <ion-icon color="secondary" slot="end" name="star"></ion-icon>
+                  <span class="white-color fn-10 dalel-Regular"
+                    >{{item.rating}}</span
+                  >
+                </ion-button>
+              </div>
+            </div> -->
+
+            <div class="name">
+              <p class="fn-14 dalel-Bold dark-black-color">{{item.name}}</p>
+            </div>
+            <div class="rating-address-container">
+              <div class="address-container">
+                <ion-icon name="location-sharp" color="primary"></ion-icon>
+                <p class="fn-14 dalel-Regular dark-black-color"> {{item.city}}</p>
+              </div>
+
+              <div class="rating-container">
+                <ion-icon color="secondary" slot="end" name="star"></ion-icon>
+                <span class="white-color fn-10 dalel-Regular"
+                  >{{item.rating}}</span
+                >
+              </div>
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
