refactor : remove comments

--- a/src/app/modules/about/about.page.html
+++ b/src/app/modules/about/about.page.html
@@ -1,7 +1,7 @@
 <app-header
   [title]="'about'"
   [isEditable]="false"
-  [backwardRoute]="'/tabs/my-reservations'"
+  [backwardRoute]="'/tabs/main'"
   [isMain]="false"
 ></app-header>
 <ion-content class="ion-padding">
