--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -104,10 +104,7 @@
             <div class="location-address">
               <p>{{item.location}}</p>
             </div>
-            <div
-              class="address-detail"
-              routerLink="/tabs/main/category-details"
-            >
+            <div class="address-detail">
               <ion-icon
                 name="arrow-forward-circle-outline"
                 color="white"
