--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -7,7 +7,7 @@
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
-      <ion-col size="6" *ngFor="let item of favourites">
+      <ion-col sizeXs="6" sizeSm="4" sizeMd="4" sizeLg="4" sizeMd="4"  *ngFor="let item of favourites">
         <ion-card class="ion-no-margin"   routerLink="/tabs/main/categories/{{item.categoryID}}/{{item.id}}">
           <img src="./../../../assets/images/512.png" />
 
