--- a/src/app/modules/my-reservations/my-reservations.page.scss
+++ b/src/app/modules/my-reservations/my-reservations.page.scss
@@ -22,7 +22,7 @@ ion-segment-button {
   margin-bottom: 0px !important;
   margin-top: 0px !important;
   height: 48px;
-  --background: #ffeee3; // rgba(var(--ion-color-secondary-rgb), 0.51);
+  --background: var(--ion-color-orange-light); 
   --color-checked: var(--ion-color-white);
   --color: var(--ion-color-secondary);
   --background-checked: var(--ion-color-primary);
