--- a/src/app/modules/category-details/category-details.page.scss
+++ b/src/app/modules/category-details/category-details.page.scss
@@ -1,128 +1,136 @@
-.item-image{
+.item-image {
   position: relative;
 
-  img{
+  img {
     border-radius: 16px;
   }
 
-  .fav-ar{
-    position:absolute;
-    top: 16px;
-    left:16px;
-  }
-
-  .fav-en{
-    position:absolute;
-    top: 16px;
-    right:16px;
-  }
-
-  .item-details{
+  .fav-ar {
     position: absolute;
-    //height: 60px;
-    width: 90%;
-    margin:0 var(--ion-padding, 16px);
-    bottom: -73px;
-    border-radius: 10px;
-    background-color: var(--ion-color-orange-light);
-    .name-rating-container{
-      display: flex;
-      justify-content: space-between;
-      .name{
-        flex-direction: row;
-        h5{
-          margin-top: 6px !important;
-        }
+    top: 16px;
+    left: 16px;
+  }
+
+  .fav-en {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+  }
+}
+
+.item-details {
+  // position: absolute;
+  //height: 60px;
+  // width: 90%;
+  margin: 0 var(--ion-padding, 16px);
+  //bottom: -73px;
+  border-radius: 10px;
+  background-color: var(--ion-color-orange-light);
+  .name-rating-container {
+    display: flex;
+    justify-content: space-between;
+    .name {
+      flex-direction: row;
+      h5 {
+        margin-top: 6px !important;
       }
-      .rating{
-        .rating-address-container {
+    }
+    .rating {
+      .rating-address-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        div {
+          flex-direction: row;
           display: flex;
-          justify-content: space-between;
-          align-items: center;
-          div {
-            flex-direction: row;
-            display: flex;
+        }
+
+        .address-container {
+          ion-icon {
+            font-size: 18px;
+            height: 20px;
           }
-      
-          .address-container {
-            ion-icon {
-              font-size: 18px;
-              height: 20px;
-            }
+        }
+
+        .rating-container {
+          ion-icon {
+            font-size: 12px;
+            // margin: 2px;
           }
-      
-          .rating-container {
-            ion-icon {
-              font-size: 12px;
-             // margin: 2px;
-            }
-            span {
-              margin: -6px 4px;
-            }
-      
-            background-color: var(--ion-color-primary);
-            border-radius: 5px;
-            padding: 12px 4px;
+          span {
+            margin: -6px 4px;
           }
+
+          background-color: var(--ion-color-primary);
+          border-radius: 5px;
+          padding: 12px 4px;
         }
       }
     }
-    
-    .address-price-container{
-      margin-top: 8px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .address, .price{
-        flex-direction: row;
-        p{
-          display: inline-block;
-          margin: 0px;
-        }
+  }
+
+  .address-price-container {
+    //margin-top: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .address,
+    .price {
+      flex-direction: row;
+      p {
+        display: inline-block;
+        margin: 0px;
       }
     }
   }
 }
 
+.services {
+  display: flex;
+  // border: 1px solid #707070;
+  justify-content: space-around;
+  border-radius: 10px;
+  background-color: #fcfcfc;
+  padding: 17px 13px;
+  margin-top: 16px;
+  margin-bottom: 24px;
+  box-shadow: 0 3px 6px rgb(0 0 0 / 16%); // var(--ion-color-dark-black-rgb, 0.16);
+  div {
+    flex-direction: row;
+    text-align: center;
+    p {
+      margin: 0px;
+    }
+  }
+}
 
+.description {
+  border: 1px solid var(--ion-color-secondary);
+  border-radius: 10px;
+  padding: 12px;
+  margin-bottom: 16px;
+  h5 {
+    margin: 0px;
+  }
+  p {
+    color: rgb(var(--ion-color-dark-black-rgb), 0.55);
+  }
+}
 
-// .menu-container {
-//     position: relative;
-//     img {
-//       width: 100%;
-//     }
-//   }
-  
-//   ion-header {
-//     .menu-icon {
-//       position: absolute;
-//       top: 30%;
-//       right: 16px;
-//       img {
-//         width: 40px;
-//         height: 40px;
-//       }
-//     }
-  
-//     .menu-title {
-//       position: absolute;
-//       top: 35%;
-//       right: 18%;
-//       font-size: 18px;
-//       color: var(--ion-color-primary);
-//       font-weight: bold;
-//       p {
-//         margin: 0px;
-//       }
-//     }
-  
-//     .back-icon {
-//       position: absolute;
-//       top: 33%;
-//       left: 16px;
-//       ion-icon {
-//         font-size: 25px;
-//       }
-//     }
-//   }
-  
+.place-images {
+  margin-bottom: 16px;
+  img {
+    border-radius: 10px;
+  }
+  .header {
+    display: flex;
+    justify-content: space-between;
+    h5 {
+      margin-bottom: 8px;
+      margin-top: 0px;
+    }
+    div {
+      flex-direction: row;
+    }
+  }
+}
