--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -126,7 +126,7 @@
     </div>
   </div>
 
-  <ion-button expand="block" (click)="reserve()">
+  <ion-button expand="block" routerLink="/tabs/main/reservation">
     <span class="auth-btn fn-16 white-color dalel-Bold"> {{ "reserve now"|translate}} </span>
   </ion-button>
 </ion-content>
