--- a/src/app/modules/tabs/tabs.page.scss
+++ b/src/app/modules/tabs/tabs.page.scss
@@ -3,3 +3,22 @@ ion-label{
     font-family: "Cairo-Regular";
     color: var(--ion-color-secondary);
 }
+
+.selected::after{
+    width: 14px;
+    height: 14px;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    top: -9px;
+    right: 42%;
+    background-color: var(--ion-color-primary);
+}
+
+
+
+
+.tab-item{
+    position: relative;
+}
+
