--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -84,7 +84,7 @@
   </div>
 
 
-  <ion-button expand="block" routerLink="/tabs/main/reservation">
+  <ion-button expand="block" routerLink="/tabs/main">
     <span class="auth-btn fn-16 white-color dalel-Bold"> {{ "confirm reservation"|translate}} </span>
   </ion-button>
 </ion-content>
