--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -4,7 +4,7 @@
       <ion-icon
         [src]="selectedTab==tab.tabName? tab.tabActiveIcon:tab.tabNotActiveIcon"
       ></ion-icon>
-      <ion-label > {{tab.tabName|translate}} </ion-label>
+      <ion-label [ngClass]="selectedTab==tab.tabName?'selected-label':''" > {{tab.tabName|translate}} </ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
