--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -1,5 +1,5 @@
 <app-header
-[title]="'reservation'"
+  [title]="'reservation'"
   [isEditable]="false"
   [backwardRoute]="'/tabs/my-reservations'"
   [isMain]="false"
@@ -9,7 +9,7 @@
     <img [src]="reservationDaetails.image " />
   </div>
 
-  <div class="name-rating-container">
+  <!-- <div class="name-rating-container">
     <div class="name">
       <h5 class="fn-16 dalel-Bold"> {{reservationDaetails.name}}</h5>
     </div>
@@ -22,9 +22,9 @@
         >
       </ion-button>
     </div>
-  </div>
+  </div> -->
 
-  <div class="address-price-container">
+  <!-- <div class="address-price-container">
     <div class="address">
       <ion-icon name="location-sharp" color="primary"></ion-icon>
       <p class="fn-14 dalel-Regular">
@@ -40,6 +40,43 @@
          {{reservationDaetails.price}}
         {{reservationDaetails.unit}}/{{reservationDaetails.perUnit}}
       </p>
+    </div>
+  </div> -->
+
+  <div class="item-details ion-padding">
+    <div class="name-rating-container">
+      <div class="name">
+        <h5 class="fn-16 dalel-Bold"> {{reservationDaetails.name}}</h5>
+      </div>
+
+      <div class="rating">
+        <div class="rating-address-container">
+          <div class="rating-container">
+            <ion-icon color="secondary" slot="start" name="star"></ion-icon>
+            <span class="white-color fn-12 dalel-Regular"
+              >{{reservationDaetails.rating}}</span
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="address-price-container">
+      <div class="address">
+        <ion-icon name="location-sharp" color="primary"></ion-icon>
+        <p class="fn-14 dalel-Regular">
+           {{reservationDaetails.city}} - {{reservationDaetails.address}}
+        </p>
+      </div>
+
+      <div class="price">
+        <p
+          class="fn-10 dalel-Bold primary-color"
+          [ngClass]="currentlangauge == 'ar' ? 'float-left' : 'float-right'"
+        >
+           {{reservationDaetails.price}} {{reservationDaetails.unit}}/{{reservationDaetails.perUnit}}
+        </p>
+      </div>
     </div>
   </div>
 
@@ -83,8 +120,9 @@
     </div>
   </div>
 
-
   <ion-button expand="block" routerLink="/tabs/main">
-    <span class="auth-btn fn-16 white-color dalel-Bold"> {{ "confirm reservation"|translate}} </span>
+    <span class="auth-btn fn-16 white-color dalel-Bold">
+      {{ "confirm reservation"|translate}}
+    </span>
   </ion-button>
 </ion-content>
