--- a/src/app/modules/reservation/reservation.page.html
+++ b/src/app/modules/reservation/reservation.page.html
@@ -5,9 +5,9 @@
   [isMain]="false"
 ></app-header>
 <ion-content class="ion-padding">
-
-
   <ion-button expand="block" routerLink="/tabs/main/reservation-payment">
-    <span class="auth-btn fn-16 white-color dalel-Bold"> {{ "complete reservation"|translate}} </span>
+    <span class="auth-btn fn-16 white-color dalel-Bold">
+      {{ "complete reservation"|translate}}
+    </span>
   </ion-button>
 </ion-content>
